Ingress/mariadb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb-ingress
  namespace: db
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    secretName: mariadb-ingress-tls
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mariadb
            port:
              number: 80
